k8s/deployment.yaml

apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: misc-pod
  name: misc-pod
spec:
  replicas: 1
  selector:
    matchLabels:
      app: misc-pod
  template:
    metadata:
      labels:
        app: misc-pod
    spec:
      volumes:
        - name: pvc-jira-home
          persistentVolumeClaim:
            claimName: pvc-jira-home
      containers:
        - image: image-registry.openshift-image-registry.svc:5000/pipelines-tutorial/misc-pod:latest
          imagePullPolicy: Always
          name: misc-pod
          volumeMounts:
            - name: pvc-jira-home
              mountPath: /jira-home
