k8s/jira-sts-svc.yaml
apiVersion: v1
kind: Service
metadata:
  creationTimestamp: null
  name: jira-sts
spec:
  ports:
  - port: 8080
    protocol: TCP
    targetPort: 8080
  selector:
    jira-pod-status: active
  sessionAffinity: None
  type: ClusterIP
status:
  loadBalancer: {}
